Fix T81529: Can't move with constraint to a zero-size local axis

To fix the problem, it was necessary to create a fallback for the
zero-sized axis in local orientation.

This also affects the gizmos.