source/blender/editors/transform/transform_orientations.h
@@ -34,6 +34,10 @@ const char *transform_orientations_spacename_get(struct TransInfo *t, const shor
 void transform_orientations_current_set(struct TransInfo *t, const short orient_index);
 
 /* Those two fill in mat and return non-zero on success */
+bool transform_orientations_create_from_axis(float mat[3][3],
+                                             const float x[3],
+                                             const float y[3],
+                                             const float z[3]);
 bool createSpaceNormal(float mat[3][3], const float normal[3]);
 bool createSpaceNormalTangent(float mat[3][3], const float normal[3], const float tangent[3]);
 
